# clevis

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  HISTORY.md  LICENSE  Makefile  PACKAGE.md  README.md  REQUIREMENTS.md  TODO.md  example_config_param.py  main.py  nested-commands.toml  project.toml  pyproject.toml
.github/workflows/: test.yml
analysis/: 2026-05-30-api-review-p1-003.md  2026-06-05-api-review-p2-001-factory-pattern.md  2026-06-05-api-review-subcommand-enhancements.md  2026-06-09-api-review-nested-prefix.md  2026-06-09-api-review-p2-007.md  2026-06-10-api-review-list-append-cli.md  P2-002-security-parameter.md  api-cli-field-exclusion.md  api-cli-optional.md  api-review-cli-aliases.md  api-review-list-append-polish.md  cli-argument-aliases.md  dynamic-registration.md  edge-case-analysis.md  functional-review-cli-aliases.md  functional-review-list-append-cli.md  functional-review-list-append-polish.md  functional.md  list-append-cli.md  list-append-polish.md  security-P2-002.md  security-cli-aliases.md  security-cli-field-exclusion.md  security-exception-handling-P2-013.md  security-list-append-cli-arguments.md
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst
examples/: README.md  app1.toml  commands.py  dynamic.py  environment.py  environment.toml  factory.py  library_mode.py  main.py  nested-commands.py  nested.py  nested.toml  plugin.py  project.toml  subcommands.py  tools.toml  validation.py  validation.toml
reporting/P1-003-optional-cli-support/: development-summary.md  functional-review.md
reporting/P2-001/: development-summary.md
reporting/P2-002/: development-summary.md  functional-review.md
reporting/P2-005/: development-summary.md
reporting/P2-006/: development-summary.md
src/clevis/: __init__.py  (+4 more)
tests/: test_advanced_types.py  test_bug_regression.py  test_clevis.py  test_cli_aliases.py  test_cli_exclusion.py  test_config_key.py  test_coverage_gaps.py  test_edge_cases.py  test_field_owner_tracking.py  test_list_append.py  test_nested_prefix.py  test_parser.py  test_register_arg_name.py  test_registration.py  test_security.py  test_subcommand_config.py  test_toctou_fix.py  test_yoker_schema.py
(+1 files in other folders)
